[package]
name = "thread_safe_port_scanner"
version = "0.1.0"
edition = "2021"
authors = ["John Harrington"]
description = "A multi-threaded port scanner supporting user specified port ranges and thread quantity"


[dependencies]
threadpool = "1.8.1"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
log = "0.4.22"
env_logger = "0.11.5"
clap = { version="4.5.13", features=["derive"] }
serde = { version = "1.0.204", features = ["derive"] }