[package]
name = "shark-scan"
version = "0.1.2"
edition = "2021"
authors = ["John Harrington"]
description = "An async multi-threaded port scanner supporting user specified port ranges, timeout durations, and thread quantity"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/shark-scan/0.1.0/shark-scan/"
readme = "README.md"
repository = "https://github.com/harr1424/shark-scan"
keywords = ["port", "scan", "sniff", "async", "threaded"]


[dependencies]
threadpool = "1.8.1"
tokio = { version = "1.39.2", features = ["full"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.13", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1